--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,12 @@
-<footer class="bg-dark text-white text-center py-3 mt-4">
-    <p>&copy; 2025 Carbon Footprint Tracker. All Rights Reserved.</p>
+<footer class="bg-dark text-white text-center py-4 mt-5">
+    <div class="container">
+        <p class="mb-2">&copy; {{ now().strftime("%Y") }} Carbon Footprint Tracker. All Rights Reserved.</p>
+
+        <div>
+            <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="text-white me-3"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="text-white"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+    </div>
 </footer>
