--- a/templates/header.html
+++ b/templates/header.html
@@ -1,14 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
     <div class="container">
-        <a class="navbar-brand" href="{{ url('home') }}">Carbon Footprint Tracker</a>
+        <a class="navbar-brand fw-bold" href="{{ url('home') }}">🌱 Carbon Footprint Tracker</a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Welcome, {{ user.username }}</a>
+                        <a class="nav-link disabled text-light">Welcome, <strong>{{ user.username }}</strong></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url('index') }}">Track</a>
@@ -17,14 +19,14 @@
                         <a class="nav-link" href="{{ url('dashboard') }}">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url('logout') }}">Logout</a>
+                        <a class="nav-link text-danger" href="{{ url('logout') }}">Logout</a>
                     </li>
                 {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url('login') }}">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url('register') }}">Register</a>
+                        <a class="nav-link btn btn-success text-white px-3" href="{{ url('register') }}">Sign Up</a>
                     </li>
                 {% endif %}
             </ul>
