--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="text-center">
-        <h1>Welcome to the Carbon Footprint Tracker</h1>
-        <p>Track and reduce your carbon footprint effectively.</p>
+    <h1 class="fw-bold">🌱 Welcome to the Carbon Footprint Tracker</h1>
+    <p class="lead text-muted">Track and reduce your carbon footprint effectively.</p>
 
+    <div class="mt-4">
         {% if user.is_authenticated %}
-            <a href="{{ url('index') }}" class="btn btn-primary">Start Tracking</a>
+            <a href="{{ url('index') }}" class="btn btn-primary btn-lg px-4">Start Tracking</a>
         {% else %}
-            <a href="{{ url('register') }}" class="btn btn-success">Get Started</a>
+            <a href="{{ url('register') }}" class="btn btn-success btn-lg px-4">Get Started</a>
         {% endif %}
     </div>
 {% endblock %}
