--- a/templates/logout.html
+++ b/templates/logout.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="text-center">
+<div class="container text-center mt-5">
     <h2>You have been logged out</h2>
+    <p class="lead">Thank you for visiting. You can log in again below.</p>
     <a href="{{ url('login') }}" class="btn btn-primary">Login Again</a>
 </div>
 {% endblock %}
